plugins {
    id 'application'
    id 'java'
    id 'org.openjfx.javafxplugin' version '0.0.12'
    id 'checkstyle'
    id "org.beryx.jlink" version "2.25.0" //uncomment for jlink
}

group 'edu.uoc'
version '1.0'
sourceCompatibility = 17

repositories {
    mavenCentral()
}

java {
    modularity.inferModulePath = true
}

javafx {
    version = "17.0.1"
    modules = [ 'javafx.controls', 'javafx.fxml']
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.8.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-params:5.8.2'
}

test {
    useJUnitPlatform()
}

javadoc{
    options.memberLevel = JavadocMemberLevel.PRIVATE
    options.encoding = "UTF-8"
    options.author = true
    destinationDir = file("docs")
}

task runCmdVersion(type: JavaExec) {
    group = "Execution"
    standardInput = System.in
    description = "Run the cmd version"
    classpath = sourceSets.main.runtimeClasspath
    mainClass = "edu.uoc.nertia.view.cmd.CmdApp"
}

task runGuiVersion(type: JavaExec) {
    group = "Execution"
    description = "Run the GUI version"
    classpath = sourceSets.main.runtimeClasspath
    jvmArgs = ['--module-path', classpath.asPath,
               '--add-modules', 'javafx.controls',
               '--add-modules', 'javafx.fxml']
    mainClass = "edu.uoc.nertia.view.gui.GuiApp"
}

run{
    classpath = sourceSets.main.runtimeClasspath
    jvmArgs = ['--module-path', classpath.asPath,
               '--add-modules', 'javafx.controls',
               '--add-modules', 'javafx.fxml']
    mainClass = "edu.uoc.nertia.view.gui.Main"
}

task testSanity(type: Test) {
    group = "Verification"
    useJUnitPlatform {
        includeTags "sanity"
    }
}

task testMinimum(type: Test) {
    group = "Verification"
    useJUnitPlatform {
        includeTags "minimum"
    }
}

task testPassPractice(type: Test) {
    group = "Verification"
    useJUnitPlatform {
        includeTags "sanity", "minimum"
    }
}

task testAdvanced(type: Test) {
    group = "Verification"
    useJUnitPlatform {
        includeTags "advanced"
    }
}

task testController(type: Test) {
    group = "Verification"
    useJUnitPlatform {
        includeTags "controller"
    }
}

task testSpecial(type:Test){
    group = "Verification"
    useJUnitPlatform {
        includeTags "special"
    }
}

task testAll(type:Test){
    group = "Verification"
    useJUnitPlatform {
        includeTags "sanity", "minimum", "advanced", "controller", "special"
    }
}

application {
    mainClassName = "edu.uoc.nertia.view.gui.Main"
    mainModule = "edu.uoc.nertia"
    applicationDefaultJvmArgs = [
            '--add-modules', 'javafx.controls',
            '--add-modules', 'javafx.fxml']
}


//Uncomment task "jar" if you only want to create a fat jar.
//If you generate a fat far, then the user's computer must have JRE.
/*jar {
    manifest {
        attributes (
                'Main-Class' : 'edu.uoc.nertia.view.gui.Main'
        )
    }
    from {
        configurations.runtimeClasspath.collect {
            it.isDirectory() ? it : zipTree(it) }
    } {
        duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    }
}*/

//If you want to create a Runtime image with jlink, then
//you must comment the previous task "jar" and uncomment the
//following task "jlink"
/*jlink {
    launcher {
        name = 'UOCnertia'
    }
}*/
